# Bakery-RecipeManager-Wt-Webapp

./: CMakeLists.txt  README.md
CukierniaRecepty/: Ingredient.h  IngredientsWidget.h  Recipe.h  RecipeDetailsWidget.h  RecipesWidget.h  Unit.h  UnitsWidget.h  User.h  database.cpp  database.h  helpers.h  main.cpp
